# notify-run-rs-api

./: Cargo.toml  LICENSE  README.md  roadmap.md
notify-run-cli/: Cargo.toml  README.md
notify-run-cli/src/: bin.rs  cli.rs
src/: cli.rs  error.rs  lib.rs  main.rs  message.rs  notify.rs  utils.rs
