[package]
name = "notify-run"
version = "0.1.0"
edition = "2021"
description = "A Rust client for sending notifications to your own phone or desktop."
homepage = "https://github.com/gruvw/notify-run-rs-api"
authors = ["gruvw <gruvw.dev@gmail.com>"]
license-file = "LICENSE"

[dependencies]
chrono = "0.4.26"
clap = {version = "4.3.0", features = ["derive"]}
inquire = "0.6.2"
qrcode = "0.12.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde_json = "1.0.96"
shellexpand = "3.1.0"
url = "2.3.1"
