[package]
name = "notify-run"
version = "0.1.0"
edition = "2021"
description = "A Rust notify.run client for sending notifications to your own phone or desktop."
documentation = "https://docs.rs/notify-run"
authors = ["gruvw <gruvw.dev@gmail.com>"]
homepage = "https://github.com/gruvw/notify-run-rs-api"
license = "MIT"
keywords = ["notify.run", "notify", "run", "notification"]
categories = ["api-bindings", "config"]

[workspace]
members = ["notify-run-cli"]

[lib]
name = "notify_run"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.26"
qrcode = "0.12.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde_json = "1.0.96"
shellexpand = "3.1.0"
thiserror = "1.0.40"
url = "2.3.1"
